# yac8emul

./: .gitmodules  CMakeLists.txt  README.md
3ds/: CMakeLists.txt  DevkitArm3DS.cmake  Dockerfile  main.cpp
3ds/data/: spec.rsf
src/: CMakeLists.txt  interpreter.cpp  main.cpp
src/yac8emul/: constants.h  errors.h  graphics.h  interpreter.h  yac8emul.h
test/: CMakeLists.txt  test.cpp
